# picky

./: README.md
gripx_control/: CMakeLists.txt  package.xml
gripx_control/config/: gripx_control.yaml  kinova_joint_state.yaml  kinova_position.yaml  tester.yaml
gripx_control/launch/: gripx_control.launch  gripx_control2.launch
gripx_description/: CMakeLists.txt  package.xml
gripx_description/launch/: display.launch  gripx_gazebo.launch
gripx_description/rviz/: urdf.rviz
gripx_description/urdf/: 00-kinova1.urdf  gripx_autogen_3.urdf  gripx_gaz_autogen.urdf  gripx_gazebo.urdf  kinova_gazebo_autogenerated.urdf  kinova_gazebo_autogenerated1.urdf
gripx_gazebo/: CMakeLists.txt  package.xml
gripx_gazebo/launch/: gazebo.launch
gripx_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gripx_moveit_config/config/: controllers.yaml  fake_controllers.yaml  gripx.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
gripx_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gripx_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
marker1/: CMakeLists.txt  package.xml
marker1/launch/: marker.launch
marker1/msg/: point.msg  point_msg.msg
marker1/src/: autogenerated_00-kinova01.urdf  marker_all_in1.cpp  position_publisher.cpp  quaternion.py
moveit_packages/: CMakeLists.txt  package.xml
moveit_packages/controllers/: CMakeLists.txt
moveit_packages/controllers/include/controllers/: utils.h
moveit_packages/controllers/launch/: cartesian_control.launch  full_mission.launch  planning_scene.launch  planning_scene2.launch  pose_control.launch  position_control.launch  position_control_with_callback.launch  roll_motion.launch
moveit_packages/controllers/src/: cartesian_control.cpp  full_mission.cpp  planning_scene.cpp  planning_scene2.cpp  position_control.cpp  position_control_with_callback.cpp  roll_motion.cpp  roll_motion_kinova.cpp  utils.cpp
moveit_packages/creating_moveit_plugins/lerp_motion_planner/launch/: lerp_example.launch
moveit_packages/move_group_interface/: CMakeLists.txt
moveit_packages/move_group_interface/launch/: move_group_interface_tutorial.launch  pick_them_berries.launch
moveit_packages/move_group_interface/src/: move_group_interface_tutorial.cpp  move_group_interface_tutorial_old.cpp  pick_them_berries.cpp
moveit_packages/moveit_cpp/config/: moveit_cpp.yaml
moveit_packages/moveit_cpp/launch/: moveit_cpp_node.launch  moveit_cpp_tutorial.launch
moveit_packages/moveit_cpp/src/: moveit_cpp_tutorial.cpp  moveit_cpp_tutorial_orig.cpp
moveit_packages/moveit_python/: CMakeLists.txt  package.xml
moveit_packages/moveit_python/launch/: gripx_python.launch
moveit_packages/moveit_python/src/: moveit_python.py
