<package>
  <name>gripx_control</name>
  <version>0.5.0</version>
  <description>The arm_control package</description>
  <maintainer email="gobatp@ethz.ch">Patrice</maintainer>

  <license>TODO</license>
  <url>https://github.com/kkumpa/ros-robotic-arm</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>    
  <build_depend>message_runtime</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>gazebo-ros-control</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <run_depend>controller_manager</run_depend>
<run_depend>joint_state_controller</run_depend><run_depend>controller_manager</run_depend>
<run_depend>joint_state_controller</run_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>position_controllers</run_depend>
<run_depend>velocity_controllers</run_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>position_controllers</run_depend>
<run_depend>velocity_controllers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <controller_interface plugin="${prefix}/arm_control_plugins.xml"/> -->
  </export>
</package>