<package>
  <name>gripx_description</name>
  <version>0.5.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="gobatp@ethz.ch">Patrice Gobat!!</author>

  <maintainer email="gobatp@ethz.ch">Patrice Gobat!!</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
